# learning_rust_backend

./: Cargo.toml  README.md
src/: main.rs
src/advance/: db_operations.rs  middleware.rs
src/basics/: counter.rs  error_handling.rs  extractors.rs  hello_world.rs  middleware.rs  scopes.rs  todo.rs  visits_counter.rs
src/mini_projects/auth_api/: Cargo.toml  readme
src/mini_projects/auth_api/src/: db.rs  main.rs
src/mini_projects/auth_api/src/middleware/: auth.rs
src/mini_projects/auth_api/src/models/: user.rs
src/mini_projects/auth_api/src/routes/: auth.rs  user.rs
src/mini_projects/auth_api/src/utils/: jwt.rs  password.rs
