[package]
name = "auth_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
futures = "0.3.32"
jsonwebtoken = "9"
mongodb = "3.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
argon2 = "0.5"
validator = { version = "0.18", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
actix-cors = "0.7"
actix-governor = "0.7"